# flazzy

./: README.md  pyproject.toml
.github/workflows/: bandit.yml  release.yml
demo/: rates.cast
src/flazzy/: api.py  cli.py  converter.py  plot.py  utils.py
tests/: test_api.py  test_converter.py  test_plot.py
