[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "flazzy"
version = "0.1.0"
description = "A command-line tool to check and convert currency rates."
authors = [
    { name = "surya", email = "surya.a@tutamail.com" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "rich >=14.0.0,<15.0.0",
    "click >=8.2.1,<9.0.0",
    "requests >=2.32.4,<3.0.0",
    "matplotlib >=3.10.3,<4.0.0",
    "pytest-sugar (>=1.0.0,<2.0.0)"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Topic :: Utilities",
    "Environment :: Console"
]

license = { text = "LGPL-2.1-or-later" }

[project.scripts]
flazzy = "flazzy.cli:cli"

[project.uri]
Homepage = "https://github.com/suryacluster06/flazzy"
Repository = "https://github.com/suryacluster06/flazzy"
Documentation = ""

[tool.poetry]
name = "flazzy"
version = "0.1.0"
description = "A command-line tool to check and convert currency rates."
authors = ["surya <surya.a@tutamail.com>"]
packages = [{ include = "flazzy", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pyright = "^1.1.402"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"

[tool.pytest.ini_options]
minversion = "7.5"
addopts = "--tb=short"
testpaths = ["test"]

